// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`options as array of strings renders an select 1`] = `
<div>
  <select>
    <option
      value="0"
    >
      Apple
    </option>
    <option
      value="1"
    >
      Banana
    </option>
    <option
      value="2"
    >
      Orange
    </option>
  </select>
</div>
`;

exports[`options options as array of numbers renders an select 1`] = `
<div>
  <select>
    <option
      value="0"
    >
      1
    </option>
    <option
      value="1"
    >
      2
    </option>
    <option
      value="2"
    >
      3
    </option>
  </select>
</div>
`;

exports[`options options as array of objects group renders grouped options 1`] = `
<div>
  <select>
    <option
      value="0"
    >
      Apple
    </option>
    <optgroup
      label="Citrus"
    >
      <option
        value="2"
      >
        Orange
      </option>
      <option
        value="3"
      >
        Lemon
      </option>
    </optgroup>
    <optgroup
      label="Berry"
    >
      <option
        value="5"
      >
        Raspberry
      </option>
      <option
        value="6"
      >
        Strawberry
      </option>
    </optgroup>
  </select>
</div>
`;

exports[`options options as array of objects label renders an select 1`] = `
<div>
  <select>
    <option
      value="0"
    >
      Apple
    </option>
    <option
      value="1"
    >
      Banana
    </option>
    <option
      value="2"
    >
      Orange
    </option>
  </select>
</div>
`;
